[package]
name = "ocujoy"
version = "1.0.0"
authors = ["Lyneca <lukemtuthill@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
ovr-sys = "0.3.0"
ctrlc = "3.1.4"
ggez = "0.5.1"

[[bin]]
name = "ocujoy"
path = "src/bin.rs"

